pkg/config/analysis/analyzers/testdata/gateway-secrets.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN6RENDQWJTZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFLRXdwTGRXSmwKY201bGRHVnpNQ0FYRFRJek1ETXhOREF5TlRRek1Gb1lEekl4TWpJd01qRTRNRFl4T0RNMldqQVZNUk13RVFZRApWUVFLRXdwTGRXSmxjbTVsZEdWek1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCndLUUJ6bzJWNW4vZVk2M2NHdUZFUGM3M0ZNOVdlR0lMOTd6Z2ZkeTNWak13SW1xbnFxcTIxWjBoOTlIR1hJdkMKRG1qSzhKS2RHRVExeUhwN0l3QXVZUVZPUnJON3dGUDJiR1hoNXdoY3pCVWlCeG5reis2WTc2ZEw5d2JhSGVrRQp2dmdJbHVwZWg4Sjlmb [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREc5MWNpYXBrTm1udW0KR1VFdEhwSVlrS0xkaW1ESlFRWlE5bGVJVkhwMzlxR2lwT0tvLzZLQnRmOGl2Z1BZZW04OFZKL2N0WkYzT0w0Qgp4ditocElBVTdPTkxRSGJEb1VKUGxTSkpJdE5zcC95UHE3SU40Y1BiYSsxWktmYWo2UFNZTHozM3ZjMktoZ1cxCnNxbXF4MGdsUUdrQVlEUjBzdmQreWFDaVEvaExqbWxjMjVFMWw3a2NZYklNRThnZG1LeTduQ1FCSnZIYjlLdWwKTXdHLzdyNWx3VTIwVHRBYStqeCt6aWREeEdFNFdhTERYWmtycWtsMUhwM3pvMUk2NXhQalNlMHhGbTlHQTlkRgpGazVuczhYbGxQOUNhc [...]
kind: Secret
metadata:
  name: httpbin-credential
  namespace: istio-system
type: Opaque
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    myapp: custom-gateway
  name: custom-gateway
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: defaultgateway-noerrors
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "httpbin-credential" # Correct credential, should not produce an error message
      hosts:
        - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: defaultgateway-bogusCredentialName
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "httpbin-credential-bogus" # Should break, wrong credential name
      hosts:
        - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: customgateway-wrongnamespace
spec:
  selector:
    istio: custom-gateway # Custom gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "httpbin-credential" # Should break, doesn't exist in custom-gateway's namespace
      hosts:
        - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bogusgateway
spec:
  selector:
    istio: custom-gateway # Nothing matches this, should generate an error
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "httpbin-credential"
      hosts:
        - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: defaultgateway-nocredential # No credentialName specified, we shouldn't generate any errors
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
      hosts:
        - "httpbin.example.com"
